--- a/css/pages/informes.css
+++ b/css/pages/informes.css
@@ -61,3 +61,173 @@
 .inicio a:hover {
     color: var(--textos);
 }
+
+/*Título*/
+
+.sec-titulo h1{
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
+/*Mensajes para el usuario*/
+
+#sec-messages {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.message {
+    color: white;
+    display: inline-flex;
+    margin: 20px auto;
+    padding: 15px;
+    border-radius: 10px;
+    width: 400px;
+    justify-content: center;
+    align-items: center;
+}
+
+.message p {
+    font-weight: 100;
+    font-style: italic;
+    color: white;
+    font-size: 12px;
+    padding-left: 5px;
+}
+
+.green {
+    background-color: var(--mensaje-usuario-verde);
+}
+
+.red {
+    background-color: var(--mensaje-usuario-rojo);
+}
+
+.yellow {
+    background-color: var(--mensaje-usuario-amarillo);
+}
+
+/*Contenido de la página*/
+
+.container-grilla-informes {
+    width: 1024px;
+    border: solid 1px var(--borde-Grilla);
+    border-radius: 15px;
+    overflow: hidden;
+    margin: 0px auto 50px auto;
+    background-color: rgb(250, 250, 250);
+}
+
+.tabla-informes {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.tabla-body:hover {
+    background-color: black;
+}
+
+th {
+    text-align: center;
+    color: var(--titulo-Grilla);
+    padding: 10px 20px;
+    font-size: 14px;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-bottom: 1px solid var(--borde-inferior-Grilla);
+}
+
+td {
+    background-color: rgb(255, 255, 255);
+    border-bottom: 1px solid var(--borde-inferior-Grilla);
+    padding: 15px 0px;
+    font-size: 12px;
+}
+
+.eleccion,
+.datos-generales,
+.datos-agrupacion {
+    vertical-align: top;
+}
+
+.flex-td {
+    display: flex;
+    justify-content: center;
+}
+
+.provincia svg {
+    width: 250px;
+}
+
+.eleccion .flex-td {
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.eleccion .flex-td * {
+    width: 100px;
+    line-height: 15px;
+}
+
+.texto-elecciones-chico {
+    font-size: 12px;
+    color: var(--textos);
+    font-weight: bold;
+}
+
+.texto-path-chico {
+    font-size: 11px;
+    color: var(--celeste);
+}
+
+.datos-generales .flex-td * {
+    border-radius: 5px;
+    margin: 2px;
+    height: 70px;
+    width: 120px;
+    font-size: 10px;
+    color: #FFF;
+    display: grid;
+    grid-template-columns: 40% 60%;
+    gap: 5px;
+    align-items: center;
+}
+
+.flex-td * .texto-recuadro * {
+    display: contents;
+}
+
+.mesas-escrutadas {
+    background-color: var(--celeste);
+}
+
+.electores {
+    background-color: var(--magenta);
+}
+
+.participacion-escrutado {
+    background-color: var(--morado);
+}
+
+.datos-agrupacion .flex-td {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    overflow-y: auto;
+    height: 325px;
+    padding: 5px;
+    font-size: 10px;
+    color: var(--textos);
+}
+
+.partidos {
+    font-weight: bold;
+    line-height: 50px;
+}
+
+.votos div {
+    padding: 15px 0px 0px 15px;
+}
