--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,7 @@
   .header-menu ul li {
       list-style-type: none;
       display: inline-flex;
+      justify-content: center;
   }
 
   .header-menu ul li a {
@@ -35,6 +36,7 @@
       border-radius: 5px;
       padding: 10px 20px 10px 20px;
       margin-right: 15px;
+      width: 100px;
   }
 
   .nav-generales:hover {
@@ -46,6 +48,7 @@
       border-radius: 5px;
       padding: 10px 20px 10px 20px;
       margin-right: 15px;
+      width: 100px;
   }
 
   .nav-paso:hover {
