--- a/css/pages/informes.css
+++ b/css/pages/informes.css
@@ -21,6 +21,7 @@
 .header-menu ul li {
     list-style-type: none;
     display: inline-flex;
+    justify-content: center;
 }
 
 .header-menu ul li a {
@@ -34,6 +35,7 @@
     border-radius: 5px;
     padding: 10px 20px 10px 20px;
     margin-right: 15px;
+    width: 100px;
 }
 
 .nav-generales:hover {
@@ -45,6 +47,7 @@
     border-radius: 5px;
     padding: 10px 20px 10px 20px;
     margin-right: 15px;
+    width: 100px;
 }
 
 .nav-paso:hover {
@@ -56,6 +59,7 @@
     background-color: var(--gris-claro);
     border-radius: 5px;
     padding: 10px 20px 10px 20px;
+    width: 100px;
 }
 
 .inicio a:hover {
