--- a/css/pages/paso-generales.css
+++ b/css/pages/paso-generales.css
@@ -30,6 +30,7 @@
 .header-menu ul li {
     list-style-type: none;
     display: inline-flex;
+    justify-content: center;
 }
 
 .header-menu ul li a {
@@ -72,6 +73,7 @@ select {
     border-radius: 5px;
     padding: 10px 20px 10px 20px;
     margin-right: 15px;
+    width: 100px;
 }
 
 .nav-generales:hover {
@@ -83,6 +85,7 @@ select {
     border-radius: 5px;
     padding: 10px 20px 10px 20px;
     margin-right: 15px;
+    width: 100px;
 }
 
 .nav-paso:hover {
@@ -104,6 +107,7 @@ select {
     background-color: var(--gris-claro);
     border-radius: 5px;
     padding: 10px 20px 10px 20px;
+    width: 100px;
 }
 
 .inicio a:hover {
@@ -233,6 +237,11 @@ select {
     white-space: nowrap;
     padding: 1.8em 10px 0 10px;
     width: 80%;
+}
+
+.recuadro h3{
+    display: flex;
+    justify-content: center;
 }
 
 .agrupaciones {
