--- a/css/common.css
+++ b/css/common.css
@@ -82,26 +82,31 @@ body {
 
 footer {
   background-color: var(--fondo-Footer);
-  display: flex;
-  height: auto;
-  justify-content: center;
   margin-top: 10px;
   padding: 15px;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
 }
 
-footer img {
+.content-footer img {
   height: 40px;
   margin-right: 20px;
 }
 
-footer p {
+footer .content-footer p {
   color: var(--texto-footer);
-  line-height: 30px;
-  max-width: 40%;
+  margin-top: 0;
 }
 
-footer a{
+.content-footer a {
   text-decoration: none;
   color: var(--texto-footer);
   margin-right: 0;
+}
+
+.content-footer{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr auto;
+  width: 70%;
 }
