--- a/css/pages/paso-generales.css
+++ b/css/pages/paso-generales.css
@@ -150,7 +150,7 @@ select {
 
 .message p {
     font-weight: 100;
-    font-style: italic;
+    /* font-style: italic; */
     color: white;
     font-size: 12px;
     padding-left: 5px;
