--- a/css/pages/paso-generales.css
+++ b/css/pages/paso-generales.css
@@ -116,6 +116,29 @@ select {
     color: var(--textos);
 }
 
+.spinner {
+    border: 4px solid rgba(0, 0, 0, .1);
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border-left-color: transparent;
+    display: none;
+    place-items: center;
+    margin: 20px auto;
+
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 /*Sección del título*/
 #sec-titulo {
     display: none;
@@ -197,7 +220,8 @@ select {
     color: white;
 }
 
-.agregar-informe a, .agregar-informe button{
+.agregar-informe a,
+.agregar-informe button {
     background-color: transparent;
     text-decoration: none;
     color: white;
@@ -259,7 +283,7 @@ select {
     width: 80%;
 }
 
-.recuadro h3{
+.recuadro h3 {
     display: flex;
     justify-content: center;
 }
@@ -278,7 +302,7 @@ select {
     border-bottom: 2px solid var(--gris-claro);
 }
 
-.progress-titulo h4{
+.progress-titulo h4 {
     color: gray;
     /*border-bottom: 2px solid var(--gris-claro);*/
 }
@@ -306,15 +330,15 @@ select {
     justify-content: space-between;
 }
 
-.progress-titulo h4{
+.progress-titulo h4 {
     font-size: 12px;
 }
 
-.progress-titulo h5{
+.progress-titulo h5 {
     font-size: 12px;
 }
 
-.progress-container h4{
+.progress-container h4 {
     font-size: 12px;
 }
 
@@ -350,7 +374,7 @@ select {
 }
 
 /*Gráfico de barras*/
-.container-grafico{
+.container-grafico {
     display: flex;
 }
 
